src/components/Themes/Themes.css
.theme-switch-wrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 2rem 0;
  font-size: 2rem;
  color: var(--text-color, #eee);
  line-height: 2rem;
}
.switch {
  position: relative;
  display: inline-block;
  width: 75px;
  height: 2rem;
}

.themeCheckbox {
  display: block;
  width: inherit;
  height: inherit;
  background-color: transparent;
  border: none;
}

.themeCheckbox:checked,
.themeCheckbox:checked:focus {
  background-color: transparent !important;
}

.themeCheckbox:checked + .slider {
  background-color: var(--background-slider, #3b3b3b);
}

.themeCheckbox:focus + .slider {
  box-shadow: 0 0 1px var(--background-slider, #3b3b3b);
}

.themeCheckbox:checked + .slider:before {
  -webkit-transform: translateX(43px);
  -ms-transform: translateX(43px);
  transform: translateX(43px);
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.slider:before {
  position: absolute;
  content: '';
  height: 1.6rem;
  width: 1.6rem;
  left: 3px;
  bottom: 3px;
  background-color: white;
  will-change: transform;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.slider.round {
  border-radius: 2rem;
}

.slider.round:before {
  border-radius: 50%;
}

